# FourDMem

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FDRFlow.md  LICENSE  Makefile  README.md  RIF-SQCE.md  TASKS.md  docker-compose.yml  mcp-config.json  start-mcp.ps1
.claude-plugin/: marketplace.json  plugin.json
.claude-plugin/commands/: search.md  status.md
.claude-plugin/hooks/: fourdmem-precompact-hook.sh  fourdmem-stop-hook.py  fourdmem-stop-hook.sh  hooks.json
.claude-plugin/rules/: fourdmem-recall.md
.codex-plugin/: plugin.json
.cursor-plugin/: mcp.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  ci.yml  nightly.yml  release.yml
.omp/hooks/: fourdmem-auto-archive.ts
benchmarks/: README.md  RESULTS.md  __init__.py  ablation.py  llm_judge.py  locomo_bench.py  locomo_dataset.py  locomo_single_project.py  longmemeval_bench.py  recall_bench.py  recall_failure.py  recall_rigorous.py  run_all.py  synthetic_recall.py
benchmarks/data/: locomo_synthetic.json
crates/evolution-core/: Cargo.toml
crates/evolution-core/src/: genome.rs  lib.rs  macro_cache.rs  sandbox.rs
crates/graph-core/: Cargo.toml
crates/graph-core/benches/: graph_bench.rs
crates/graph-core/src/: graph.rs  lib.rs  tda.rs  version_tree.rs
crates/py-bindings/: Cargo.toml
crates/py-bindings/src/: lib.rs
crates/retrieval-core/: Cargo.toml
crates/retrieval-core/src/: embedding.rs  fulltext.rs  lib.rs  rif_u.rs  router.rs  rrf.rs  token_budget.rs  vector_index.rs
crates/storage-core/: Cargo.toml
crates/storage-core/benches/: l0_bench.rs  memory_bench.rs
crates/storage-core/src/: integrity.rs  l0.rs  l2.rs  l3.rs  lib.rs  memory_core.rs
crates/sync-engine/: Cargo.toml
crates/sync-engine/src/: lib.rs  parser.rs  sync.rs  watcher.rs
docs/: automation-optimization-plan.md  automation-upgrade-v2.md  oh-my-pi-prompt.md
python/: pyproject.toml  ruff.toml
python/cognition/: __init__.py  aggregator.py  dedup.py  dream.py  embed_utils.py  embedder.py  extractor.py  gap_reflection.py  l2_indexer.py  promoter.py  salience.py  signals.py  ssgm_governor.py  system3.py  tool_experience.py  turn_classifier.py
python/daemon/: __init__.py  evolution_scheduler.py  health_monitor.py  integrity_checker.py  rule_daemon.py
python/evolution/: __init__.py  analogy_engine.py  auto_plugin.py  genetic_sandbox.py  myelination.py  paradigm_shift.py  strange_loop.py  strange_loop_guard.py  topology.py
python/fourdmem/: __init__.py
python/mcp_server/: __init__.py  lifecycle.py  server.py  state.py  tools.py
python/memory_core/: __init__.py  cli.py  networkx_view.py
python/tests/: test_aggregation.py  test_conflict.py  test_counterfactual.py  test_dormancy.py  test_dream.py  test_embed_utils.py  test_evolution.py  test_extractor.py  test_feedback.py  test_memory_e2e.py  test_metacog.py  test_p0_governance.py  test_pipeline.py  test_salience.py  test_wakeup.py
scripts/: consolidate_memory.py  migrate_vault.py
