[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fourdmem"
version = "0.1.0"
readme = "../README.md"
license = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    # ── MCP Protocol ─────────────────────────────────
    "mcp>=1.0",
    "pydantic>=2.0",

    # ── File watching & templating ────────────────────
    "watchdog>=3.0",
    "jinja2>=3.1",

    # ── Logging ───────────────────────────────────────
    "loguru>=0.7",

    # ── Graph & ML ────────────────────────────────────
    "networkx>=3.0",
    "scikit-learn>=1.3",

    # ── Git integration ───────────────────────────────
    "gitpython>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-benchmark>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
manifest-path = "../crates/py-bindings/Cargo.toml"
python-packages = ["mcp_server", "cognition", "evolution", "daemon", "memory_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[project.scripts]
fourdmem = "memory_core.cli:main"
