[package]
name = "evolution-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "[V4.0] Cognitive DNA storage, sandbox scheduling, cognitive macro compilation cache"

[dependencies]
petgraph = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = "1"
