[package]
name = "retrieval-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Four-dimensional retrieval: HNSW vectors, Tantivy full-text, RRF fusion, RIF-U scoring"

[features]
default = []
vector-index = ["usearch"]

[dependencies]
usearch = { workspace = true, optional = true }
tantivy = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "1"
tokio = { workspace = true }
jieba-rs = "0.10.1"
