[package]
name = "storage-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "L0 SQLite + L3 YAML storage with subjective time & utility attributes"

[dependencies]
rusqlite = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
thiserror = "1"
jieba-rs = "0.10.1"
graph-core = { path = "../graph-core" }
retrieval-core = { path = "../retrieval-core" }
sync-engine = { path = "../sync-engine" }
evolution-core = { path = "../evolution-core" }

[dev-dependencies]
tempfile = "3"
criterion = { workspace = true }

[[bench]]
name = "l0_bench"
harness = false

[[bench]]
name = "memory_bench"
harness = false
